[metadata]
name = storage-kpi
author = Zbigniew Reszela
author_email = zreszela@cells.es
description = ALBA storage KPI scripts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/reszelaz/storage-kip
project_urls =
    Bug Tracker = https://github.com/reszelaz/storage-kpi/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.5

[options.packages.find]
where = src